# secrets-manager

./: .gitignore  README.md  app.py  pyproject.toml  secrets_manager.tcss
.github/workflows/: ci.yaml
secrets_manager/: preview.py
secrets_manager/models/: gcp_projects.py
secrets_manager/utils/: gcp.py  helpers.py
tests/: conftest.py
tests/test_models/: test_gcp_projects.py
tests/test_utils/: test_gcp.py  test_helpers.py
